Add class CRUD and refine README
